Changelog
=========

In Development
==============

RestBox v0.3.1
==============

Released on December 4, 2018.

Redis v0.1
==========

Released on December 3, 2018.

Rest, WebApi v0.3
=================

Released on November 30, 2018

- Fix: RestBox.Insert and Replace don't att Content-Type header.

Core, Rest, WebApi v0.2
=======================

Released on November 29, 2018.

- Fix: robust Uri handling.

Core, Rest, WebApi v0.1
=======================
 
Released on November 22, 2018.

- Initial release.