@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>0.3</Version>
+    <Version>0.3.1</Version>
     <PackageId>Boxroom.Rest.WebApi</PackageId>
     <Authors>Nicola Iarocci</Authors>
     <Company>CIR 2000</Company>
